CHANGELOG

2.0.45
UTILS:

BUGFIX:

GENERAL:


2.0.44 (20220629)
UTILS:
* UTIL type=xml-issue | extend visibility for removing duplicate address/service objects
* UTIL type=device | introduce actions=manageddevice-create / manageddevice-delete
* UTIL type=device | introduce actions=DeviceGroup-removeSerial/DeviceGroup-addSerial

BUGFIX:
* UTIL type=securityprofile actions=delete - bugfix to get API mode working
* UTIL type=address-merger | bugfix if one of the object has an empty description string

GENERAL:


2.0.43 (20220622)
UTILS:
* UTIL type=rule | introduce new actions=app-postgres-fix
* UTIL type=securityprofile securityprofiletype=custom-url-category | introduce actions=custom-url-category-fix-leading-dot
* UTIL type=address actions=create-address-from-file:FILE.txt - introduce two new bool argument: force-add-to-group' / 'force-change-value
* UTIL type=rule action=description-Replace-Character | introduce variable $$newline$$
* UTIL type=rule-merger | introduce tag 'merged' and extend description which rules were merged
* UTIL type=rule-merger | introduce argument exportCSV=merged.html

BUGFIX:
* class DH - set commands fix of FROM/TO field of rules
* UTIL type=address actions=create | bugfix if exiting object is of type address-group
* class DH - bugfix for "set commands" if value contains newline
* UTIL type=address actions=create-address-from-file | bugfixes
* UTIL type=rule-merger | merging description correctly
* class ServiceStore | bugfix to NOT error out if duplicate servicegroup and service are available
* UTIL type=rule-merger | bugfix for missing variables

GENERAL:
* update to Device App-ID version: 8571-7398
* docker container update install more python modules


2.0.42 (20220515)
UTILS:
* UTIL type=address 'actions=exporttoexcel:FILE.html,ResolveIP|NestedMembers' - extension with nested IP members ip resolution and count
* UTIL type=address 'filter=(ip.count > 200)' now also working for address-groups